<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.SteapAppV2.ui.home.HomeFragment">

<!--    TODO-->
<!--    remove default text-->

    <!--    TODO-->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="false"
        app:indicatorColor="?attr/colorSecondary"
        app:indicatorSize="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:trackColor="?attr/colorSecondaryContainer"
        app:trackThickness="42dp" />


<!--    TODO-->
    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_steps"
        android:textSize="88sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />
    <TextView
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/goal"
        app:layout_constraintBottom_toTopOf="@+id/counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />
    <TextView
        android:id="@+id/steps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/steps"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="164dp"
        android:layout_height="64dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/md_theme_dark_onPrimaryContainer"
        android:text="@string/start_text"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:textSize="24sp"
        app:icon="@drawable/baseline_hiking_24"
        app:iconPadding="4dp"
        app:iconSize="32dp"
        app:iconTint="@color/md_theme_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/md_theme_dark_onPrimaryContainer"
        android:text="@string/count_text"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>